User 2.3.1

	* Added checkboxes and radio options as valid userconfig types.
	* Added a "GetControlLinks" method on the UserHelper class.  This will act as authoritative source of the administrative
	actions possible for a given user or user id that the currently logged in user can perform.
	* Implemented user caching via the Construct method.
	* Minor NOTICE fix in the admin form for when no groups are available.
	-- Charlie Powell <charlie@eval.bz>  5 Nov 2012

User 2.3.0

	* Added support for the new user social component.
	* Fixed the user configurations not saving on edit and registration.
	* Added user config validation.
	* Updated the /me template, no longer displays the view information (edit only).
	-- Charlie Powell <charlie@eval.bz>  20 Oct 2012

User 2.2.3

	* Minor fix to support facebook access tokens.
	-- Charlie Powell <charlie@eval.bz>  14 Oct 2012

User 2.2.2

	* Fixed the onregistration and onedit keys
	* Changed default hashing count from 15 iterations to 11 iterations.  This should drastically decrease login times on production.
	-- Charlie Powell <charlie@eval.bz>  8 Oct 2012


User 2.2.1

	* Fixed some facebook issues with the newest api version.
	* Updated the login script to provide some user feedback
	* Fixed a minor bug with the avatar
	-- Charlie Powell <charlie@eval.bz>  3 Oct 2012

User 2.2.0

	* Added a javascript login form to provide some animation for the user to wait for slow server processors,
	(the hashing algorithm takes a few seconds to calculate).
	* Set the controller to redirect to the profile page if a logged in user goes to /user/login.
	* Added avatars.
	* Fixed several bugs with administration.
	* Added new hook, /user/postsave.
	* Minor fixes in the user system.
	* Standardized the CHANGELOG format.
	-- Charlie Powell <charlie@eval.bz>  20 Sep 2012

User 2.1.1

	-- Charlie Powell <charlie@eval.bz>  20 Aug 2012

User 2.1.0

	-- Charlie Powell <charlie@eval.bz>  12 Aug 2012

User 2.0.0
